--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Courier New";
   color: #444444;
 }
 
@@ -23,7 +23,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Jura', sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -171,9 +171,8 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   color: #fff;
   transition: 0.3s;
-  font-size: 15px;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
+  font-size: 1.25em;
+  font-family: "Courier New";
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
@@ -419,11 +418,11 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0;
-  font-size: 56px;
-  font-weight: 700;
+  font-size: 6em;
   line-height: 64px;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Courier New';
+  background: rgba(0,0,0,0.6);
 }
 
 #hero h1 span {
@@ -434,6 +433,7 @@ h1, h2, h3, h4, h5, h6 {
   color: rgba(255, 255, 255, 0.9);
   margin: 10px 0 0 0;
   font-size: 24px;
+  background: rgba(0,0,0,0.6);
 }
 
 #hero .icon-box {
@@ -442,6 +442,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid rgba(255, 255, 255, 0.3);
   height: 100%;
   text-align: center;
+  background: rgba(0,0,0,0.6);
 }
 
 #hero .icon-box i {
@@ -513,7 +514,7 @@ section {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Josefin Slab', serif;;
 }
 
 .section-title h2::after {
@@ -531,7 +532,7 @@ section {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Josefin Slab', serif;;
   color: #151515;
 }
 
@@ -541,7 +542,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 28px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Josefin Slab', serif;;
 }
 
 .about .content ul {
@@ -709,7 +710,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.8), rgba(0, 0, 0, 0.8)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -722,10 +723,11 @@ section {
 
 .cta p {
   color: #fff;
+  background: rgba(0,0,0,0.8);
 }
 
 .cta .cta-btn {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Jura', sans-serif;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 1px;
@@ -907,7 +909,7 @@ section {
 .counts .content .count-box p {
   padding: 15px 0 0 0;
   margin: 0 0 0 50px;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Jura', sans-serif;
   font-size: 14px;
   color: #3b3b3b;
 }
@@ -918,7 +920,7 @@ section {
   margin-top: 20px;
   color: #3b3b3b;
   font-size: 15px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Josefin Slab', serif;;
   transition: ease-in-out 0.3s;
 }
 
@@ -1019,6 +1021,7 @@ section {
   font-style: italic;
   margin: 0 auto 15px auto;
   color: #eee;
+  background-color: rgba(0,0,0,0.5);
 }
 
 .testimonials .owl-nav, .testimonials .owl-dots {
@@ -1454,7 +1457,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Jura', sans-serif;
   color: #fff;
 }
 
