--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,7 +137,7 @@ p {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 15px 0;
+  padding: 0;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
@@ -281,12 +281,12 @@ p {
 .get-started-btn {
   color: #fff;
   border-radius: 4px;
-  padding: 7px 25px 8px 25px;
+  padding: 2px 25px 3px 25px;
   white-space: nowrap;
   transition: 0.3s;
   font-size: 14px;
   display: inline-block;
-  border: 2px solid #ffc451;
+  border: 1px solid #ffc451;
 }
 
 .get-started-btn:hover {
@@ -296,15 +296,15 @@ p {
 
 @media (max-width: 768px) {
   .get-started-btn {
-    margin: 0 48px 0 0;
-    padding: 7px 20px 8px 20px;
+    margin: 4px 52px 0 0;
+    padding: 2px 20px 5px 20px;
   }
 }
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  top: 20px;
+  top: 5px;
   right: 15px;
   z-index: 9998;
   border: 0;
@@ -510,6 +510,7 @@ p {
   #hero h2 {
     font-size: 20px;
     line-height: 24px;
+    margin-bottom: 3em;
   }
 }
 
