--- a/.build/static/css/style.css
+++ b/.build/static/css/style.css
@@ -733,7 +733,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.8), rgba(0, 0, 0, 0.8)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.8), rgba(0, 0, 0, 0.8)), url("../img/hero-bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -1159,6 +1159,21 @@ section {
 .team .member:hover .social {
   opacity: 1;
   bottom: 15px;
+}
+
+
+/*--------------------------------------------------------------
+# Payment
+--------------------------------------------------------------*/
+
+#payment p {
+  font-size: 1.25em;
+  color: #ffc451;
+}
+
+#payment i {
+  background: #ffc451;
+  color: #151515;
 }
 
 /*--------------------------------------------------------------
