--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,6 +138,7 @@ p {
   transition: all 0.5s;
   z-index: 997;
   padding: 0;
+  background:#050505;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
@@ -555,6 +556,23 @@ section {
   text-transform: uppercase;
   font-family: 'Josefin Slab', serif;;
   color: #151515;
+}
+
+
+#title h1 {
+  margin: 0;
+  font-size: 6em;
+  line-height: 64px;
+  font-family: 'Courier New';
+}
+
+#title h1 span {
+  color: #ffc451;
+}
+
+#title h2 {
+  margin: 10px 0 0 0;
+  font-size: 24px;
 }
 
 /*--------------------------------------------------------------
