--- a/.build/static/css/style.css
+++ b/.build/static/css/style.css
@@ -30,6 +30,9 @@ p {
   font-size: 1.5em;
 }
 
+.yellow-underline {
+  text-decoration: underline #ffc451;
+}
 /*--------------------------------------------------------------
 # Fonts family
 --------------------------------------------------------------*/
