--- a/.build/static/css/project.css
+++ b/.build/static/css/project.css
@@ -21,10 +21,6 @@
   transition: box-shadow 300ms, background-color 500ms ease-out;
 }
 
-.palette-color:hover{
-    z-index: 3;
-    box-shadow: 0em .25rem 0.25rem rgba(0,0,0,.3)!important;
-}
 
 #color-palettes{
     max-height: 12em;
@@ -62,6 +58,8 @@
 
 .input-color {
     opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .input-color + label{
@@ -69,6 +67,7 @@
     width: 2em;
     border-radius: 2px;
     box-shadow: 0 .5rem 0.5rem rgba(0,0,0,.15)!important;
+    margin-bottom: 0px;
 
     -webkit-transition: all 300ms ease-out;
     -moz-transition: all 300ms ease-out;
