--- a/static/css/project.css
+++ b/static/css/project.css
@@ -58,11 +58,16 @@
 .template-div {
 
     border: 1px solid white;
+    width: 400px;
 
     -webkit-transition: all 300ms ease-out;
     -moz-transition: all 300ms ease-out;
     -o-transition: all 300ms ease-out;
     transition: all 300ms ease-out;
+}
+
+.template-div:nth-child(n+7) {
+    display: none;
 }
 
 .template-div:hover {
